Added geojsonLayer and confirmation dialog in sortableList

--- a/src/vois/geo/MapTest.ipynb
+++ b/src/vois/geo/MapTest.ipynb
@@ -11,7 +11,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1dea99aa7a2c409ca359c800df2fdc16",
+       "model_id": "066c6fb180b8473dac1fc5557710f905",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +25,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49c19acb0c3f4a70955e3e416612e7a0",
+       "model_id": "7f428327ab3a434382b2f0f23fedf3fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -39,7 +39,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00df907528434714960e20c02bc67325",
+       "model_id": "33b5af2a1414462284e8b8b00c6466be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be115036af074be4b9ff6983ece53179",
+       "model_id": "5da5eb3eaeb84853b342337c00a11415",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00a648219e304d6da9023ba454e1d3f9",
+       "model_id": "ab6cab1c1c8242bca8af7cbce1a1e30d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -159,19 +159,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "97243dfa",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'content': 'Map',\n",
+       " 'show_fullscreen': True,\n",
+       " 'show_coordinates': True,\n",
+       " 'show_search': True,\n",
+       " 'show_scale': True,\n",
+       " 'show_basemaps': True,\n",
+       " 'show_overview': True,\n",
+       " 'color_first': '#0d856d',\n",
+       " 'color_second': '#a0dcd0',\n",
+       " 'dark': True,\n",
+       " 'basemapindex': 1,\n",
+       " 'center': [46.22545288226939, 11.195068359375002],\n",
+       " 'zoom': 7.0}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m.state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "84fef6ea",
    "metadata": {
     "tags": []
