--- a/src/vois/vuetify/Tests/dialogGenericTest.ipynb
+++ b/src/vois/vuetify/Tests/dialogGenericTest.ipynb
@@ -2,25 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "355b8fc4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06cccb3fe42f44328ff27e735f9e5e17",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output(layout=Layout(height='0px', width='0px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "from IPython.display import display\n",
     "from ipywidgets import widgets, Layout, HTML\n",
@@ -29,8 +16,8 @@
     "display(output)\n",
     "\n",
     "\n",
-    "%run dialogGeneric.py\n",
-    "import switch\n",
+    "%run ../dialogGeneric.py\n",
+    "from vois.vuetify import switch\n",
     "\n",
     "def on_s_change(value):\n",
     "    dlg.okdisabled = False\n",
@@ -47,7 +34,10 @@
     "    dlg.close()\n",
     "    \n",
     "s = switch.switch(True, 'PNG format', onchange=on_s_change)\n",
-    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "dlg = dialogGeneric(title='Settings', text='Please select the format for download:', show=True,\n",
     "                    addclosebuttons=False, width=\"20vw\", persistent=True, #dark=True, \n",
     "                    addokcancelbuttons=True, on_ok=on_ok, on_cancel=on_cancel,\n",
@@ -79,25 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "6b6abd3e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bf3378cfaf24417b951d3f1d7868847",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HTML(value='\\n<style>\\n.bottomleftdialog {\\n    position: absolute;\\n    bottom: 0;\\n    left: 0;\\n}\\n</style>…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example of a dialog positioned on the bottom left side of the screen: use customclass!\n",
     "\n",
@@ -119,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "92a7fc3e",
    "metadata": {},
    "outputs": [],
@@ -133,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "d7c28beb",
    "metadata": {},
    "outputs": [],
@@ -147,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "934ef549",
    "metadata": {},
    "outputs": [],
@@ -183,7 +158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
