--- a/src/vois/vuetify/Tests/sortableListTest.ipynb
+++ b/src/vois/vuetify/Tests/sortableListTest.ipynb
@@ -2,28 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3aca41d7",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de498a13b8ca4073bdeb87cb1baad4ab",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[VBox(children=(Card(children=[Col(children=[Card(children=[CardTitle(children=[Btn(children=[Ic…"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple example\n",
     "%run ../../development/load_local_vois.py -w\n",
@@ -33,7 +17,6 @@
     "from ipywidgets import widgets\n",
     "from IPython.display import display\n",
     "import ipyvuetify as v\n",
-    "\n",
     "\n",
     "items = [{ \"name\": 'Jane Adams',   \"email\": 'jane@adams.com'   },\n",
     "         { \"name\": 'Paul Davis',   \"email\": 'paul@davis.com'   },\n",
@@ -63,62 +46,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "0f059ffe-c33e-4506-b01c-53e19057613f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Simple example with new functions for remove confirmation dialog and item movement disabled\n",
+    "%run ../../development/load_local_vois.py -w\n",
+    "\n",
+    "from vois.vuetify import sortableList, dialogYesNo, tooltip\n",
+    "\n",
+    "from ipywidgets import widgets, Layout\n",
+    "from IPython.display import display\n",
+    "import ipyvuetify as v\n",
+    "\n",
+    "confirmation_dialog_output = widgets.Output(layout=Layout(width='0px', height='0px'))\n",
+    "\n",
+    "confirmation_dialog_titleheight = 30\n",
+    "confirmation_dialog_width       = 500\n",
+    "\n",
+    "\n",
+    "items = [{ \"name\": 'Jane Adams',   \"email\": 'jane@adams.com'   },\n",
+    "         { \"name\": 'Paul Davis',   \"email\": 'paul@davis.com'   },\n",
+    "         { \"name\": 'Amanda Brown', \"email\": 'amanda@brown.com' }\n",
+    "        ]\n",
+    "\n",
+    "# Creation of a new item\n",
+    "def itemNew():\n",
+    "    return {\"name\": \"new\", \"email\": \"empty\"}\n",
+    "\n",
+    "\n",
+    "# Content of an item\n",
+    "def itemContent(item, index):\n",
+    "    return [\n",
+    "        v.CardSubtitle(class_=\"mb-n4\", children=[item['name']]),\n",
+    "        v.CardText(    class_=\"mt-n2\", children=[item['email']])\n",
+    "    ]\n",
+    "\n",
+    "\n",
+    "# Remove all items\n",
+    "def itemRemoveAll(widget, event, data):\n",
+    "    \n",
+    "    def on_yes():\n",
+    "        s.items = []\n",
+    "        \n",
+    "    dialogYesNo.dialogYesNo(title='Confirmation...',\n",
+    "                            text='Confirm removal of all names?',\n",
+    "                            titleheight=confirmation_dialog_titleheight,\n",
+    "                            width=confirmation_dialog_width,\n",
+    "                            output=confirmation_dialog_output,\n",
+    "                            show=True,\n",
+    "                            on_yes=on_yes)\n",
+    "    \n",
+    "\n",
+    "reset = v.Btn(icon=True, children=[v.Icon(children=['mdi-playlist-remove'])])\n",
+    "reset.on_event('click', itemRemoveAll)\n",
+    "\n",
+    "\n",
+    "def itemActivated(index):\n",
+    "    print(s.items[index])\n",
+    "    \n",
+    "    \n",
+    "def confirmation_text_callback(index):\n",
+    "    return 'Confirm removal of %s?'%s.items[index]['name']\n",
+    "\n",
+    "def confirmation_title_callback(index):\n",
+    "    return 'Please confirm'\n",
+    "\n",
+    "s = sortableList.sortableList(items=items, width=400, dark=False, allowNew=True, itemNew=itemNew, newOnTop=True, newButtonOnTop=False, itemContent=itemContent,\n",
+    "                              activatable=False, onactivated=itemActivated,\n",
+    "                              bottomContent=[tooltip.tooltip(\"Remove all persons\",reset)],\n",
+    "                              confirmation_for_remove=True,\n",
+    "                              confirmation_text_callback=confirmation_text_callback,\n",
+    "                              confirmation_title_callback=confirmation_title_callback,\n",
+    "                              confirmation_dialog_output=confirmation_dialog_output,\n",
+    "                              confirmation_dialog_titleheight=confirmation_dialog_titleheight,\n",
+    "                              confirmation_dialog_width=confirmation_dialog_width)\n",
+    "\n",
+    "# Disable items moves upo and down\n",
+    "s.disableMoveItems()\n",
+    "\n",
+    "display(s.draw())\n",
+    "display(confirmation_dialog_output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2617d88a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'Amanda Brown', 'email': 'amanda@brown.com'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s.items"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ea636a3a",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a0c838180d19445084b9ca07d13b5764",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[VBox(children=(Card(children=[Col(children=[Card(children=[CardTitle(children=[Item(children=[T…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d3f0af483584bd59a7aababd2d5ad0d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sortable list with complex content\n",
     "%run ../../development/load_local_vois.py -w\n",
@@ -213,28 +244,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a07f5208",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9743e9dd80ec4d7d86d1cfdcc647f672",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Html(children=[VBox(children=(Card(children=[Col(children=[Card(children=[CardTitle(children=[Item(children=[T…"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Simple example with one of the item always active\n",
     "%run ../../development/load_local_vois.py -w\n",
@@ -354,7 +369,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
