--- a/src/vois/urlUpdateTest.ipynb
+++ b/src/vois/urlUpdateTest.ipynb
@@ -2,10 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8c150971",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "845f8a7345ac44ee8375af466c127172",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(height='0px', width='0px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from ipywidgets import widgets, Layout, HTML\n",
     "from IPython.display import display\n",
@@ -15,7 +32,7 @@
     "\n",
     "%run urlUpdate.py\n",
     "\n",
-    "urlUpdate('?test=1', output)"
+    "urlUpdate('?test=2', output)"
    ]
   },
   {
@@ -43,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
