--- a/src/vois/vuetify/Tests/cardTest.ipynb
+++ b/src/vois/vuetify/Tests/cardTest.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f65656ca",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4d9889d17bf745838711c238c8bda458",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(elevation=0, events=['clicked'], focusedopacity=0.0, iconsize='0px', imagesize='0px', subtitle='Example o…"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#  Example of responsive card\n",
     "%run ../card.py\n",
@@ -19,12 +35,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "66056c12",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4eda2675175c4254a6450b7a0c24d2c9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(events=['clicked'], height='15vh', icon='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccq…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1445d53ed0aa4684ad76738514bd9dab",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ../card.py\n",
     "\n",
@@ -55,12 +100,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "517f941c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a258cb742244418da30451f53c365c3b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "card(backgroundimageurl='data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABU4AAACZCAIAAAB/pDefAAAALHRFWHRDcmVhdGl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "03fa6e85c737478a8af142d1f2bbdf3a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Card with background image\n",
     "%run ../card.py\n",
