Added custom_new parameter to sortableList widget

--- a/src/vois/vuetify/Tests/sortableListTest.ipynb
+++ b/src/vois/vuetify/Tests/sortableListTest.ipynb
@@ -73,9 +73,10 @@
     "         { \"name\": 'Amanda Brown', \"email\": 'amanda@brown.com' }\n",
     "        ]\n",
     "\n",
-    "# Creation of a new item\n",
-    "def itemNew():\n",
-    "    return {\"name\": \"new\", \"email\": \"empty\"}\n",
+    "# Custom creation of a new item\n",
+    "def custom_new():\n",
+    "    s.doAddItem({\"name\": \"new\", \"email\": \"empty\"})\n",
+    "    s.disableMoveItems()\n",
     "\n",
     "\n",
     "# Content of an item\n",
@@ -123,7 +124,8 @@
     "                              confirmation_title_callback=confirmation_title_callback,\n",
     "                              confirmation_dialog_output=confirmation_dialog_output,\n",
     "                              confirmation_dialog_titleheight=confirmation_dialog_titleheight,\n",
-    "                              confirmation_dialog_width=confirmation_dialog_width)\n",
+    "                              confirmation_dialog_width=confirmation_dialog_width,\n",
+    "                              custom_new=custom_new)\n",
     "\n",
     "# Disable items moves upo and down\n",
     "s.disableMoveItems()\n",
@@ -221,7 +223,7 @@
     "    \n",
     "    sp = v.Html(tag='div', class_=\"pa-0 ma-0 mr-3\", children=[''])\n",
     "    \n",
-    "    return [ v.Row(class_=\"pa-0 ma-0 ml-2\", no_gutters=True, children=[tfname, sp, tfsurname, sp, sw.draw(), sp, dp.draw()]) ]\n",
+    "    return [ v.Row(class_=\"pa-0 ma-0 ml-2\", no_gutters=True, children=[tfname, sp, tfsurname, sp, sw.draw(), sp, dp]) ]\n",
     "\n",
     "\n",
     "s = sortableList.sortableList(items=items, width=520, outlined=False, dark=dark,\n",
